--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,7 @@
 <section class="hero-section">
     <div class="hero-container">
         <div class="profile-image-container">
-            <img src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Your Name Profile Picture" class="profile-image">
-            <div class="image-glow"></div>
+            <img src="{{ url_for('static', filename='images/profile.jpg') }}" class="profile-image">
         </div>
         
         <div class="hero-content">
