--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
     <footer class="main-footer">
         <div class="footer-container">
             <div class="footer-social">
-                <a href="mailto:fred.ver06@gmail.com" class="social-link" aria-label="Email">
+                <a href="#" class="social-link email-copy" data-email="fred.ver06@gmail.com" aria-label="Copy Email">
                     <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                 </a>
                 <a href="https://github.com/fredneedsausername" class="social-link" aria-label="GitHub">
